--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ img.emoji {
         </script>
     </div>		<div class="wpcnt">
 			<div class="wpa wpmrec">
-				<span class="wpa-about">Advertisements</span>
+			
 				<div class="u">		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-right:5px;margin-top:0px">
 			<div id="atatags-26942-5db4737f590e3"><div style="height:250px;width:300px;"><iframe frameborder="0" scrolling="no" width="300" height="250" style="border:none;margin:0;overflow:hidden;width:300px;height:250px;"></iframe></div><div id="atatags-26942-5db4737f590e3__controls" class="ata-controls" style="height:10px;width:300px;"><span id="atatags-26942-5db4737f590e3__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
 		</div>		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-top:0px">
@@ -213,7 +213,7 @@ img.emoji {
 		
 		<div class="site-info">
 										<a class="site-name" href="https://edudatagie.wordpress.com/" rel="home">edudatagie</a><span class="comma">,</span>
-						<a href="https://wordpress.com/?ref=footer_custom_powered" rel="nofollow">Powered by WordPress.com</a>.					</div><!-- .site-info -->
+									</div><!-- .site-info -->
 	</footer><!-- #colophon -->
 
 </div><!-- #page -->
