--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 						<span class="hide-visually collapsed-text">collapsed</span>
 					</label>
 					<div class="menu-primary-container"><ul id="menu-primary" class="main-menu" aria-label="submenu"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-51"><a href="https://edudatagie.com">Home</a></li>
-<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item menu-item-43"><a href="https://edudatagie.com/about/" aria-current="page">About</a></li>
+<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item menu-item-43"><a href="https://edudatagie.com/about.html" aria-current="page">About</a></li>
 <li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9"><a href="https://edudatagie.wordpress.com/blog/">Contact</a></li>
 <li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.wordpress.com/philosophy/">Philosophy</a></li>
 <li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.wordpress.com/schools-and-teachers/">Student Data Analysis</a></li>
