--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="profile" href="https://gmpg.org/xfn/11">
 	<title>Contact – edudatagie</title>
-<link rel="dns-prefetch" href="//s2.wp.com">
-<link rel="dns-prefetch" href="//s1.wp.com">
-<link rel="dns-prefetch" href="//s0.wp.com">
-<link rel="dns-prefetch" href="//widgets.wp.com">
-<link rel="dns-prefetch" href="//wordpress.com">
-<link rel="dns-prefetch" href="//fonts.googleapis.com">
-<link rel="dns-prefetch" href="//s.pubmine.com">
-<link rel="dns-prefetch" href="//x.bidswitch.net">
-<link rel="dns-prefetch" href="//static.criteo.net">
-<link rel="dns-prefetch" href="//ib.adnxs.com">
-<link rel="dns-prefetch" href="//aax.amazon-adsystem.com">
-<link rel="dns-prefetch" href="//bidder.criteo.com">
-<link rel="dns-prefetch" href="//cas.criteo.com">
-<link rel="dns-prefetch" href="//gum.criteo.com">
-<link rel="dns-prefetch" href="//ads.pubmatic.com">
-<link rel="dns-prefetch" href="//gads.pubmatic.com">
-<link rel="dns-prefetch" href="//tpc.googlesyndication.com">
-<link rel="dns-prefetch" href="//ad.doubleclick.net">
-<link rel="dns-prefetch" href="//googleads.g.doubleclick.net">
-<link rel="dns-prefetch" href="//www.googletagservices.com">
-<link rel="dns-prefetch" href="//cdn.switchadhub.com">
-<link rel="dns-prefetch" href="//delivery.g.switchadhub.com">
-<link rel="dns-prefetch" href="//delivery.swid.switchadhub.com">
+
 <link rel="alternate" type="application/rss+xml" title="edudatagie » Feed" href="https://edudatagie.wordpress.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="edudatagie » Comments Feed" href="https://edudatagie.wordpress.com/comments/feed/">
 	<script type="text/javascript">
@@ -315,14 +293,14 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 						<span class="hide-visually expanded-text">expanded</span>
 						<span class="hide-visually collapsed-text">collapsed</span>
 					</label>
-					<div class="menu-primary-container"><ul id="menu-primary" class="main-menu" aria-label="submenu"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-51"><a href="https://edudatagie.wordpress.com">Home</a></li>
-<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="https://edudatagie.wordpress.com/about/">About</a></li>
-<li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3 current_page_item menu-item-9"><a href="https://edudatagie.wordpress.com/blog/" aria-current="page">Contact</a></li>
-<li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.wordpress.com/philosophy/">Philosophy</a></li>
-<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.wordpress.com/schools-and-teachers/">Student Data Analysis</a></li>
-<li id="menu-item-182" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-182"><a href="https://edudatagie.wordpress.com/teachers/">For Teachers</a></li>
-<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-88"><a href="https://edudatagie.wordpress.com/students-and-parents/">For Students</a></li>
-<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.wordpress.com/general-services/">Writing Services</a></li>
+					<div class="menu-primary-container"><ul id="menu-primary" class="main-menu" aria-label="submenu"><li id="menu-item-51" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-home menu-item-51"><a href="https://edudatagie.com">Home</a></li>
+<li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-43"><a href="https://edudatagie.com/about.html">About</a></li>
+<li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-3 current_page_item menu-item-9"><a href="https://edudatagie.com/contact.html" aria-current="page">Contact</a></li>
+<li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.com/philosophy.html">Philosophy</a></li>
+<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.com/data.html">Student Data Analysis</a></li>
+<li id="menu-item-182" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-182"><a href="https://edudatagie.com/teachers.html">For Teachers</a></li>
+<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-88"><a href="https://edudatagie.com/students.html">For Students</a></li>
+<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.com/writing.html">Writing Services</a></li>
 <li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="https://edudatagie.wordpress.com/blog-2/">Blog</a></li>
 </ul></div>				</nav><!-- #site-navigation -->
 			
@@ -535,4 +513,4 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
 </script>
 
 
-<div class="comment-likes-overlay" style="display: none;"></div><img src="https://pixel.wp.com/g.gif?blog=154343757&amp;v=wpcom&amp;tz=-4&amp;user_id=0&amp;post=3&amp;subd=edudatagie&amp;host=edudatagie.wordpress.com&amp;ref=https%3A%2F%2Fedudatagie.wordpress.com%2Fblog-2%2F&amp;fcp=182&amp;rand=0.30920463874248805" alt=":)" id="wpstats"><script src="https://s.skimresources.com/js/725X1342.skimlinks.js"></script></body></html>
+</body></html>
