fixing contact page

--- a/contact.html
+++ b/contact.html
@@ -379,16 +379,15 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 	</div><!-- #content -->
 
 	<footer id="colophon" class="site-footer responsive-max-width">
-		
-		<div class="site-info">
-										<a class="site-name" href="https://edudatagie.wordpress.com/" rel="home">edudatagie</a><span class="comma">,</span>
-						<a href="https://wordpress.com/?ref=footer_custom_powered" rel="nofollow">Powered by WordPress.com</a>.					</div><!-- .site-info -->
+				
+
+<!-- .site-info -->
 	</footer><!-- #colophon -->
 
 </div><!-- #page -->
 
 <!--  -->
-<div id="wpadminbar" class="marketing-bar"><div class="marketing-bar-text">Create your website at <span class="skimlinks-unlinked">WordPress.com</span></div><a class="marketing-bar-button" href="https://wordpress.com/?ref=marketing_bar">Get started</a></div><script type="text/javascript" src="//0.gravatar.com/js/gprofiles.js?ver=201943y"></script>
+<
 <script type="text/javascript">
 /* <![CDATA[ */
 var WPGroHo = {"my_hash":""};
