fixing contact page

--- a/contact.html
+++ b/contact.html
@@ -360,11 +360,8 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
         </script>
     </div>		<div class="wpcnt">
 			<div class="wpa wpmrec">
-				<span class="wpa-about">Advertisements</span>
-				<div class="u">		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-right:5px;margin-top:0px">
-			<div id="atatags-26942-5db4be723c4fa"><div style="height:250px;width:300px;"><iframe frameborder="0" scrolling="no" width="300" height="250" style="border:none;margin:0;overflow:hidden;width:300px;height:250px;"></iframe></div><div id="atatags-26942-5db4be723c4fa__controls" class="ata-controls" style="height:10px;width:300px;"><span id="atatags-26942-5db4be723c4fa__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
-		</div>		<div style="padding-bottom:15px;width:300px;height:250px;float:left;margin-top:0px">
-			<div id="atatags-114160-5db4be723c500"><div style="height:250px;width:300px;"><iframe frameborder="0" scrolling="no" width="300" height="250" style="border:none;margin:0;overflow:hidden;width:300px;height:250px;"></iframe></div><div id="atatags-114160-5db4be723c500__controls" class="ata-controls" style="height:10px;width:300px;"><span id="atatags-114160-5db4be723c500__complain-btn" class="ata-controls__complain-btn" style="display: inline;">Report this ad</span></div></div>
+				
+				<div class="u">	
 		</div></div>
 				
 			</div>
