--- a/about.html
+++ b/about.html
@@ -112,8 +112,26 @@ img.emoji {
 	})();
 
 
-/*Got rid of adtags*/
 
+
+</script><style type="text/css">.ata-controls {
+    text-align: right;
+    line-height: 10px;
+    height: 10px;
+}
+
+.ata-controls__complain-btn,
+.ata-controls__privacy-btn {
+    font-size: 6px;
+    vertical-align: middle;
+    font-family: Verdana, sans-serif;
+    color: #c8c7cc;
+    text-transform: uppercase;
+    letter-spacing: 0.3px;
+    cursor: pointer;
+}
+
+/*Got rid of adtags*/
 
 
 	
