--- a/about.html
+++ b/about.html
@@ -134,6 +134,36 @@ img.emoji {
 /*Got rid of adtags*/
 
 
+
+.ata-controls__complain-btn:hover,
+.ata-controls__privacy-btn:hover {
+    color: #666666;
+}
+.ata-controls__complain-btn:active,
+.ata-controls__privacy-btn:active {
+    color: #5ac8fa;
+}
+
+.ata-controls__complain-btn_clicked,
+.ata-controls__complain-btn_clicked:hover,
+.ata-controls__complain-btn_clicked:active {
+    color: #000;
+    cursor: default;
+}
+
+.ata-controls__privacy-btn {
+    float: left;
+}
+.ata-controls__complain-btn {
+    float: right;
+}
+</style></head>
+
+<body class="page-template-default page page-id-23 wp-custom-logo wp-embed-responsive customizer-styles-applied singular image-filters-enabled admin-bar highlander-enabled highlander-light">
+<div id="page" class="site">
+	<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
+
+
 	
 		<header id="masthead" class="site-header responsive-max-width">
 
