you're getting close

--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@ img.emoji {
     cursor: pointer;
 }
 
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+/*<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
 <style type="text/css"></style><link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
@@ -141,7 +141,7 @@ body /shadow-deep/ [touch-action="pan-x"]{ -ms-touch-action: pan-x; touch-action
 [touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }
 body /shadow-deep/ [touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }
 [touch-action="pan-x pan-y"],[touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }
-body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }
+body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }*/
 </style><style type="text/css">.adtags-stiky-ad {
     position: fixed;
     top: 0;
