--- a/about.html
+++ b/about.html
@@ -142,7 +142,9 @@ body /shadow-deep/ [touch-action="pan-x"]{ -ms-touch-action: pan-x; touch-action
 body /shadow-deep/ [touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }
 [touch-action="pan-x pan-y"],[touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }
 body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }*/
-</style><style type="text/css">.adtags-stiky-ad {
+</style>
+
+<!--<style type="text/css">.adtags-stiky-ad {
     position: fixed;
     top: 0;
     left: 0;
@@ -246,7 +248,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
         animation: adtags-move-right-arrow-up .5s;
         transform: rotate(-25deg);
     }
-}
+}-->
 </style>
 
 
