--- a/about.html
+++ b/about.html
@@ -483,9 +483,9 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
 	if( wpcom_mobile_user_agent_info.isIPad() )
 		mobileStatsQueryString += "&x_" + 'ipad_views' + '=' + 'views';
 
-	if( "" != mobileStatsQueryString ) {
+	/*if( "" != mobileStatsQueryString ) {
 		new Image().src = document.location.protocol + '//pixel.wp.com/g.gif?v=wpcom-no-pv' + mobileStatsQueryString + '&baba=' + Math.random();
-	}
+	}*/
 	
 }
 </script>
