--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@ img.emoji {
 	window.google_analytics_uacct = "UA-52447-2";
 </script>
 
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-52447-2']);
 	_gaq.push(['_gat._anonymizeIp']);
@@ -113,7 +113,7 @@ img.emoji {
 	})();
 </script>
 
-<!--<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
 <script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style type="text/css"></style><link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
