--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@ img.emoji {
 		__ATA.criteo = __ATA.criteo || {};
 		__ATA.criteo.cmd = __ATA.criteo.cmd || [];
 		</script>
-		<script type="text/javascript">
+		<!--<script type="text/javascript">
 		(function(){function g(a,c){a:{for(var b=a.length,d="string"==typeof a?a.split(""):a,e=0;e<b;e++)if(e in d&&c.call(void 0,d[e],e,a)){c=e;break a}c=-1}return 0>c?null:"string"==typeof a?a.charAt(c):a[c]};function h(a,c,b){b=null!=b?"="+encodeURIComponent(String(b)):"";if(c+=b){b=a.indexOf("#");0>b&&(b=a.length);var d=a.indexOf("?");if(0>d||d>b){d=b;var e=""}else e=a.substring(d+1,b);a=[a.substr(0,d),e,a.substr(b)];b=a[1];a[1]=c?b?b+"&"+c:c:b;a=a[0]+(a[1]?"?"+a[1]:"")+a[2]}return a};var k=0;function l(a,c){var b=document.createElement("script");b.src=a;b.onload=function(){c&&c(void 0)};b.onerror=function(){c("error")};a=document.getElementsByTagName("head");var d;a&&0!==a.length?d=a[0]:d=document.documentElement;d.appendChild(b)}function m(a){return"string"==typeof a&&0<a.length}
 		function p(a,c,b){c=void 0===c?"":c;b=void 0===b?".":b;var d=[];Object.keys(a).forEach(function(e){var f=a[e],n=typeof f;"object"==n&&null!=f||"function"==n?d.push(p(f,c+e+b)):null!==f&&void 0!==f&&(e=encodeURIComponent(c+e),d.push(e+"="+encodeURIComponent(f)))});return d.filter(m).join("&")}function q(){return window.__ATA||{}}function r(a,c){a||(q().config=c.c,l(c.url))}var t=Math.floor(1E13*Math.random());q().rid=t;
 		var u=q().pageParams,v="//"+(q().serverDomain||"s.pubmine.com")+"/conf",w=window.top===window,x;try{var y=JSON.parse(document.getElementById("oil-configuration").innerText);if("boolean"!==typeof y.gdpr_applies)throw Error("Config doesn't contain gdpr_applies");x=y.gdpr_applies?1:0}catch(a){x=null}
@@ -95,7 +95,7 @@ img.emoji {
 <meta name="msapplication-TileImage" content="https://edudatagie.files.wordpress.com/2019/09/educirclelogo.jpg?w=196">
 <script type="text/javascript">
 	window.google_analytics_uacct = "UA-52447-2";
-</script>
+</script>-->
 
 <script type="text/javascript">
 	var _gaq = _gaq || [];
@@ -114,7 +114,7 @@ img.emoji {
 
 
 
-</script><style type="text/css">.ata-controls {
+/*</script><style type="text/css">.ata-controls {
     text-align: right;
     line-height: 10px;
     height: 10px;
@@ -141,7 +141,7 @@ body /shadow-deep/ [touch-action="pan-x"]{ -ms-touch-action: pan-x; touch-action
 [touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }
 body /shadow-deep/ [touch-action="pan-y"]{ -ms-touch-action: pan-y; touch-action: pan-y; }
 [touch-action="pan-x pan-y"],[touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }
-body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }*/
+body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action="pan-y pan-x"]{ -ms-touch-action: pan-x pan-y; touch-action: pan-x pan-y; }
 </style>
 
 <!--<style type="text/css">.adtags-stiky-ad {
@@ -248,7 +248,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
         animation: adtags-move-right-arrow-up .5s;
         transform: rotate(-25deg);
     }
-}-->
+}*/
 </style>
 
 
