--- a/about.html
+++ b/about.html
@@ -129,10 +129,11 @@ img.emoji {
     text-transform: uppercase;
     letter-spacing: 0.3px;
     cursor: pointer;
-}
+}*/
 
-/*<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
-<style type="text/css"></style><link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script>
+
+<!--<style type="text/css"></style><link rel="stylesheet" type="text/css" id="gravatar-card-css" href="https://0.gravatar.com/dist/css/hovercard.min.css?ver=201943y"><link rel="stylesheet" type="text/css" id="gravatar-card-services-css" href="https://0.gravatar.com/dist/css/services.min.css?ver=201943y"><script src="https://c0.pubmine.com/1.70.01571827725992/ata.js"></script><style>[touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 body /shadow-deep/ [touch-action="none"]{ -ms-touch-action: none; touch-action: none; }
 [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
 body /shadow-deep/ [touch-action="auto"]{ -ms-touch-action: auto; touch-action: auto; }
@@ -248,7 +249,7 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
         animation: adtags-move-right-arrow-up .5s;
         transform: rotate(-25deg);
     }
-}*/
+}-->
 </style>
 
 
