--- a/about.html
+++ b/about.html
@@ -288,10 +288,10 @@ body /shadow-deep/ [touch-action="pan-x pan-y"],body /shadow-deep/ [touch-action
 <li id="menu-item-43" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-23 current_page_item menu-item-43"><a href="https://edudatagie.com/about.html" aria-current="page">About</a></li>
 <li id="menu-item-9" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-9"><a href="https://edudatagie.com/contact.html">Contact</a></li>
 <li id="menu-item-86" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-86"><a href="https://edudatagie.com/philosophy.html">Philosophy</a></li>
-<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.com/data.html">Student Data Analysis</a></li>
+<li id="menu-item-87" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-87"><a href="https://edudatagie.com/data.html">Academic Analytics</a></li>
 <li id="menu-item-182" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-182"><a href="https://edudatagie.com/teachers.html">For Teachers</a></li>
-<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-88"><a href="https://edudatagie.com/students.html">For Students</a></li>
-<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.com/writing.html">Writing Services</a></li>
+<!--<li id="menu-item-88" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-88"><a href="https://edudatagie.com/students.html">For Students</a></li>
+<li id="menu-item-89" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-89"><a href="https://edudatagie.com/writing.html">Writing Services</a></li>-->
 <li id="menu-item-102" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-102"><a href="https://edudatagie.wordpress.com/blog-2/">Blog</a></li>
 </ul></div>				</nav><!-- #site-navigation -->
 			
